crates/daemon/tests/snapshots/daemon_foundation__disconnected_job_stream_still_persists_final_status.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: snapshot
---
[
    JobRecord {
        id: "job_000002",
        kind: "reconcile",
        scope: "system",
        status: Succeeded,
        started_at: "<timestamp>",
        finished_at: Some(
            "<timestamp>",
        ),
        summary: Some(
            "Gateway runtime reconciled",
        ),
        error: None,
    },
    JobRecord {
        id: "job_000001",
        kind: "reconcile",
        scope: "system",
        status: Succeeded,
        started_at: "<timestamp>",
        finished_at: Some(
            "<timestamp>",
        ),
        summary: Some(
            "Gateway runtime reconciled",
        ),
        error: None,
    },
]
