crates/daemon/tests/snapshots/daemon_foundation__fixture_cleanup_preserves_operation_error_precedence.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: outcomes
---
[
    Ok(
        "value",
    ),
    Err(
        "operation sentinel",
    ),
    Err(
        "cleanup sentinel",
    ),
    Err(
        "operation failed: operation sentinel; fixture cleanup failed: cleanup sentinel",
    ),
]
