crates/daemon/tests/snapshots/daemon_foundation__idle_client_without_newline_does_not_block_health_requests.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: lines
---
[
    Object {
        "message": String("daemon healthy"),
        "protocol_version": Number(3),
        "status": String("ok"),
        "type": String("response"),
    },
]
