crates/daemon/tests/snapshots/daemon_foundation__invalid_reconciliation_scope_reports_scope_parse_failure.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000001"),
            "message": String("job accepted"),
            "protocol_version": Number(2),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000001"),
            "kind": String("reconcile"),
            "scope": String("project:"),
            "type": String("job_started"),
        },
        Object {
            "error": String("invalid reconciliation scope `project:`: reconciliation scope `project:` has an empty id component"),
            "job_id": String("job_000001"),
            "type": String("job_failed"),
        },
    ],
    [
        JobRecord {
            id: "job_000001",
            kind: "reconcile",
            scope: "project:",
            status: Failed,
            started_at: "<timestamp>",
            finished_at: Some(
                "<timestamp>",
            ),
            summary: None,
            error: Some(
                "invalid reconciliation scope `project:`: reconciliation scope `project:` has an empty id component",
            ),
        },
    ],
)
