crates/daemon/tests/snapshots/daemon_foundation__malformed_request_does_not_stop_accepting_connections.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: lines
---
[
    Object {
        "message": String("daemon healthy"),
        "protocol_version": Number(1),
        "status": String("ok"),
        "type": String("response"),
    },
]
