crates/daemon/tests/snapshots/daemon_foundation__managed_resource_update_check_returns_success_response.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: snapshot
---
(
    [
        Object {
            "message": String("Managed Resource update check completed"),
            "protocol_version": Number(2),
            "status": String("ok"),
            "type": String("response"),
            "update_check": Object {
                "managed_resources": Array [],
            },
        },
    ],
    1,
)
