crates/daemon/tests/snapshots/daemon_foundation__protocol_mismatch_returns_restart_guidance_without_creating_a_job.snap
---
source: crates/daemon/tests/daemon_foundation.rs
expression: snapshot
---
(
    [
        Object {
            "message": String("daemon protocol mismatch; run `pv daemon:restart`"),
            "protocol_version": Number(2),
            "status": String("error"),
            "type": String("response"),
        },
    ],
    [],
)
